--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "geoguess-api",
+  "license": "MPL-2.0",
+  "version": "1.0.0",
+  "author": "OOF2510",
   "packageManager": "yarn@4.10.3",
   "dependencies": {
     "axios": "^1.6.2",
