--- a/package.json
+++ b/package.json
@@ -4,6 +4,12 @@
   "version": "1.0.0",
   "author": "OOF2510",
   "packageManager": "yarn@4.10.3",
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
     "axios": "^1.6.2",
     "bcryptjs": "^3.0.2",
