add firebase app check for leaderboard submit and session endpoints

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,9 @@ PORT=8080
 
 # Mapillary API
 MAP_API_KEY=your_mapillary_api_key_here
+
+# Firebase App Check
+FIREBASE_APP_ID=your_firebase_app_id
+FIREBASE_SERVICE_ACCOUNT_KEY_BASE64=base64_encoded_service_account_json
+# Alternatively, provide the raw JSON (single line) if not using base64
+# FIREBASE_SERVICE_ACCOUNT_KEY={"type":"service_account",...}
