--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^8.1.0",
     "express-session": "^1.18.2",
+    "firebase-admin": "^13.5.0",
     "https": "^1.0.0",
     "mongodb": "^6.20.0"
   }
