--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,15 @@
       "src": "/(.*)",
       "dest": "index.js"
     }
+  ],
+  "crons": [
+    {
+      "path": "/warm/pano",
+      "schedule": "*/15 * * * *"
+    },
+    {
+      "path": "/warm/images",
+      "schedule": "*/15 * * * *"
+    }
   ]
 }
