--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "license": "MPL-2.0",
   "version": "1.0.0",
   "author": "OOF2510",
-  "packageManager": "yarn@4.10.3",
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=20.0.0"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "bun ./index.js"
   },
   "dependencies": {
     "axios": "^1.6.2",
