--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "bun ./index.js"
   },
   "dependencies": {
+    "@oof2510/llmjs": "^1.3.0",
     "axios": "^1.6.2",
     "bcryptjs": "^3.0.2",
     "connect-mongo": "^5.1.0",
