--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,9 @@ FIREBASE_APP_ID=your_firebase_app_id
 FIREBASE_SERVICE_ACCOUNT_KEY_BASE64=base64_encoded_service_account_json
 # Alternatively, provide the raw JSON (single line) if not using base64
 # FIREBASE_SERVICE_ACCOUNT_KEY={"type":"service_account",...}
+
+# Openrouter 
+OPENROUTER_API_KEY=your_openrouter_api_key_here
+AI_MATCH_ROUNDS=5
+AI_MATCH_EXPIRY_MINUTES=60
+OPENROUTER_BASE_URL=https://openrouter.ai/api/v1/
