--- a/package.json
+++ b/package.json
@@ -1,24 +1,27 @@
 {
   "name": "geoguess-api",
   "license": "MPL-2.0",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "author": "OOF2510",
   "engines": {
-    "bun": ">=1.0.0"
+    "bun": ">=1.3.0"
   },
+  "type": "module",
+  "packageManager": "bun@1.3.5",
   "scripts": {
-    "start": "bun ./index.js"
+    "start": "bun run ./index.js",
+    "dev": "bun run --hot ./index.js"
   },
   "dependencies": {
     "axios": "^1.6.2",
     "bcryptjs": "^3.0.2",
     "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "express-rate-limit": "^8.1.0",
     "express-session": "^1.18.2",
     "firebase-admin": "^13.5.0",
+    "hono": "^4.11.3",
     "https": "^1.0.0",
     "mongodb": "^6.20.0"
   }
